Allow preview features in all projects with Surefire test.
- pull up surefire config